--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -17,6 +17,14 @@
     "no-empty-source": true,
     "indentation": 4,
     "max-nesting-depth": 4,
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": [
+          "deep"
+        ]
+      }
+    ],
     "selector-pseudo-element-no-unknown": [
       true,
       {
