--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cmc",
+  "name": "aamc",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,10 +11,13 @@
     "eslint": "vue-cli-service lint --fix"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^0.2.4",
+    "@splidejs/vue-splide": "^0.5.15",
     "axios": "^0.24.0",
     "bignumber.js": "^9.0.2",
     "core-js": "^3.20.2",
-    "element-plus": "^1.3.0-beta.1",
+    "element-plus": "^1.3.0-beta.5",
+    "lightweight-charts": "^3.7.0",
     "vue": "^3.2.26",
     "vue-i18n": "^9.1.9",
     "vue-router": "4.0.11",
