--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.24.0",
     "bignumber.js": "^9.0.2",
     "core-js": "^3.20.2",
+    "dayjs": "^1.10.7",
     "element-plus": "^1.3.0-beta.5",
     "lightweight-charts": "^3.7.0",
     "vue": "^3.2.26",
