--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^3.2.26",
     "vue-i18n": "^9.1.9",
     "vue-router": "4.0.11",
+    "vue3-clipboard": "^1.0.0",
     "vuex": "4.0.2"
   },
   "devDependencies": {
