--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@element-plus/icons-vue": "^0.2.4",
     "@splidejs/splide-extension-auto-scroll": "^0.3.6",
     "@splidejs/vue-splide": "^0.5.15",
+    "@walletconnect/client": "^1.7.3",
+    "@walletconnect/qrcode-modal": "^1.7.3",
     "axios": "^0.24.0",
     "bignumber.js": "^9.0.2",
     "core-js": "^3.20.2",
