--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@element-plus/icons-vue": "^0.2.4",
     "@splidejs/splide-extension-auto-scroll": "^0.3.6",
     "@splidejs/vue-splide": "^0.5.15",
+    "@toruslabs/torus-embed": "^1.20.4",
     "@walletconnect/client": "^1.7.3",
     "@walletconnect/qrcode-modal": "^1.7.3",
     "axios": "^0.24.0",
